# osu-tool

./: .gitignore  CMakeLists.txt  README.md
gui/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
include/: beatmap.hpp  beatmapset.hpp  config.hpp  utils.hpp
parsing/: CMakeLists.txt
parsing/include/osutool/parsing/: beatmap.hpp  beatmapset.hpp
parsing/src/: CMakeLists.txt  beatmap.cpp  beatmapset.cpp  utils.hpp
parsing/test/: CMakeLists.txt  test.cpp
src/: beatmap.cpp  beatmapset.cpp  config.cpp  main.cpp  utils.cpp
test/: test.cpp  trimbeatmapsets.py
